# ckanext-iiif

./: .cz.toml  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  MANIFEST.in  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml  setup.py  test.ini
.github/: PULL_REQUEST_TEMPLATE.md  SUPPORT.md
.github/workflows/: main.yml  tests.yml
ckanext/iiif/: interfaces.py  plugin.py
ckanext/iiif/builders/: abc.py  manifest.py  utils.py
ckanext/iiif/lib/: manifest.py  utils.py
ckanext/iiif/logic/: actions.py  auth.py
ckanext/iiif/routes/: __init__.py  iiif.py
docker/: Dockerfile
docs/: index.md
docs/_scripts/: gen_api_pages.py
tests/: test_manifest.py  test_routes.py  test_utils.py
tests/integration/: test_actions.py  test_auth.py  test_iiif_route.py
tests/unit/: test_plugin.py
tests/unit/builders/: test_manifest.py  test_utils.py
tests/unit/logic/: test_actions.py  test_auth.py
tests/unit/routes/: test_iiif.py
